tests/invalid/simple/Function_CompileFail_1.whiley
void f(int x):
    asdkljkljg(x)

void System::main([string] args):
    f(1)
